maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: ')' expected but '}' found.
		}
                ^JediEscaper:15: error: ':' expected but ',' found.
def expandPath(x,y,i) {
                ^JediEscaper:42: error: identifier expected but '}' found.
}
^